# sorted-hlist

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: intersection.rs
